# deepl-pro

./: .gitignore  pyproject.toml
deepl_pro/: translator.py
deepl_translator/: __init__.py  translator.py
recap_deepl_pro/: __init__.py  translator.py
tests/: test_deepl_translator.py
